--- a/popup.html
+++ b/popup.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
-    <title>Degraphe Video Recorder</title>
+    <title>Tabs Collector Chrome Extension</title>
 </head>
 
 <body>
